--- a/uol-web-dev/style.css
+++ b/uol-web-dev/style.css
@@ -431,3 +431,25 @@ input[type="submit"] {
   text-transform: uppercase;
   padding: 12px;
 }
+
+.mapcontainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 100%;
+  }
+
+  [class*="map-"] {
+    width: 250px;
+    height: 210px;
+    max-width: 98%;
+  }
+
+  @media only screen and (max-width: 360px) {
+  /* For mobile phones: */
+  [class*="map-"] {
+    width: 50px;
+    height: 50px;
+  }
+}
