--- a/style.css
+++ b/style.css
@@ -563,3 +563,34 @@ input[type="submit"] {
 .banner-image {
 	width: 35%;
 }
+.mmapcontainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-size: 100%;
+  }
+
+  .marvelmapmm {
+    width: 200px;
+    height: 230px;
+    padding-right: 5px;
+  }
+
+  .dcmapmm {
+    width: 200px;
+    height: 230px;
+    padding-right: 5px;
+  }
+
+  @media only screen and (max-width: 360px) {
+  /* For mobile phones: */
+  [class*="map-"] {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+[class*="map-"] {
+    max-width: 95%;
+  }
