--- a/uol-web-dev/style.css
+++ b/uol-web-dev/style.css
@@ -300,6 +300,27 @@ input[type="submit"] {
   }
 }
 
+/* Styling for Carousel */
+div.container-carousel {
+  width: 80%;
+  margin: auto;
+}
+.carousel-image {
+  width: 100%;
+  opacity: 0.9;
+  height: auto;
+  margin: auto;
+}
+
+.carousel-caption {
+  height: 210px;
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 /* Styling for FAQ */
 .accordion {
   background-color: #eee;
@@ -351,7 +372,7 @@ input[type="submit"] {
     justify-content: space-around;
     align-items: center;
     margin-right: 20px;
-    marging-left: 20px;
+    margin-left: 20px;
   }
 
   .votebuttons {
@@ -594,3 +615,158 @@ input[type="submit"] {
 [class*="map-"] {
     max-width: 95%;
   }
+
+/* Styling for Ratings */
+
+.rating-heading {
+  font-size: 25px;
+  margin-right: 15px;
+}
+
+.fa {
+  font-size: 22px;
+}
+
+.checked {
+  color: gold;
+}
+
+.fa-star-half {
+  color: gold;
+}
+
+.rating-side {
+  float: left;
+  width: 10%;
+  margin-top: 10px;
+  margin-right: 5px;
+}
+
+.rating-middle {
+  float: left;
+  width: 50%;
+  margin-top: 10px;
+  margin-right: 20px;
+}
+
+.rating-right {
+  text-align: left;
+  margin-right: 150px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.rating-bar-container {
+  width: 100%;
+  background-color: #f1f1f1;
+  text-align: center;
+  color: white;
+}
+
+.bar-5 {width: 72%; height: 14px; background-color: #00FF00;}
+.bar-4 {width: 15%; height: 14px; background-color: #00FF00;}
+.bar-3 {width: 2%; height: 14px; background-color: #00FF00;}
+.bar-2 {width: 4%; height: 14px; background-color: #00FF00;}
+.bar-1 {width: 8%; height: 14px; background-color: #00FF00;}
+
+@media (max-width: 400px) {
+  .rating-side, .rating-middle {
+    width: 100%;
+  }
+
+  .rating-right {
+    display: none;
+  }
+}
+
+/* Styling for Footer */
+
+footer {
+  position: absolute;
+  bottom: 100;
+  width: 100%;
+  height: 200px;
+  text-align: center;
+}
+.container-footer2 {
+  column-count: 3;
+  column-width: 250px;
+  column-gap: 10px;
+  column-rule-width: 1px;
+}
+
+.Attractions {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+}
+.VisitorInformation {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+}
+
+.ContactInformation {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.SocialMedia {
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popups {
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: ;
+}
+
+.fa:hover {
+  opacity: 0.65;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+  padding: 7px;
+  width: 28px;
+  border-radius: 50%;
+  opacity: 1;
+}
+
+.fa-instagram {
+  background: #3f729b;
+  color: white;
+  padding: 7px;
+  width: 28px;
+  border-radius: 50%;
+  opacity: 1;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+  padding: 7px;
+  width: 28px;
+  border-radius: 50%;
+  opacity: 1;
+}
+
+.fa-youtube {
+  background: #c4302b ;
+  color: white;
+  padding: 7px;
+  width: 28px;
+  border-radius: 50%;
+  opacity: 1;
+}
