--- a/uol-web-dev/style.css
+++ b/uol-web-dev/style.css
@@ -1,663 +1,190 @@
-/* Do not alter the code below, these are the fixed font sizes for the typography */
-* {
-  font-family: 'Work Sans', serif;
-}
-
-body {
-  font-family: 'Work Sans', serif;
-  font-size: 12px;
+/* Typography DO NOT ALTER */
+*, body {
+  font: 12px 'Work Sans', serif;
 }
 
 h1 {
-  font-family: 'Work Sans', serif;
-  font-size: 3em;
-  font-weight: 800;
+  font: 800 2.5em 'Work Sans', serif;
+  /* style weight size/line-height font-family */
 }
 
 h2 {
-  font-size: 2em;
-  font-weight: 600;
+  font: 600 2em 'Work Sans', serif;
 }
 
 h3 {
-  font-size: 1.5em font-weight: 400;
+  font: 400 1.5em 'Work Sans', serif;
 }
 
 p {
-  font-size: 1em;
-  font-weight: 400;
+  font: 400 1em 'Work Sans', serif;
 }
 
 footer-text {
-  font-size: 0.75em;
-  font-weight: 700;
+  font: 700 0.75em 'Work Sans', serif;
 }
 
 navbar-text {
-  font-size: 1.25em;
-  font-weight: 700;
+  font: 700 1.25em 'Work Sans', serif;
 }
 
-/* Do not alter the code below. It's to set the whitespace for all the containers */
+/* Wraps the entire page to give it a margin DO NOT ALTER */
 .container-page {
-  margin: 10px 120px 0px 120px
-}
-
-.container-vote {
-  padding: 20px;
-}
-
-.container-ticket-promo {
-  padding: 20px;
-}
-
-.container-faq {
-  padding: 20px;
-}
-
-/* Styling for Promotions content and container */
-.container-promo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.promo-box {
+  margin: 0em 15em 0em 15em;
   display: flex;
   flex-direction: column;
-  margin: 12px 24px;
+  align-items: stretch;
 }
 
-/* Styling for Tickets content and container */
-.tab {
+/* Styling for Vote */
+.container-vote {
+  display: flex;
+  flex-direction: row;
+  padding-top: 2em;
+}
+
+.vote-img {
+  max-width: 100%;
+  height: auto;
+}
+
+.vote-content {
+  padding: 4em;
+}
+
+/* Styling for Tickets Promo DO NOT ALTER */
+.container-tab {
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
   display: flex;
+  justify-content: space-between;
 }
 
-.tab button {
+.container-tab button {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  height: 60px;
-  width: 50%;
+  justify-content: space-around;
   align-items: center;
+  width: 50%;
+  cursor: pointer;
+  font: bolder 2em 'Work Sans', serif;
   text-transform: uppercase;
-  font-size: 24px;
-  font-weight: bolder;
-  cursor: pointer;
-  position: relative;
+  height: 2em;
 }
 
-.tab-content {
+.container-ticket-promo {
   display: flex;
-  padding: 6px 12px;
+  flex-direction: column;
+  padding-top: 2em;
+}
+
+#container-ticket {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0.5em 1em;
   border: 1px solid #ccc;
-  flex-direction: row;
+}
+
+#container-promo {
+  display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
+  padding: 0.5em 1em;
+  border: 1px solid #ccc;
 }
 
-.tab button:hover {
-  background-color: #6abdf8;
-}
-
-.tab button:active {
-  background-color: #fff;
-}
-
-.inputBoxNum {
-  margin: 18px;
-  width: 50%;
+.promo-content {
   display: flex;
   flex-direction: column;
-}
-
-.inputBoxChoice {
-  margin: 18px;
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-}
-
-#selectMarvel {
-  padding: 20px;
-}
-
-.label-checkbox {
-  font-size: 20px;
-}
-
-input[type="checkbox"] {
-  cursor: pointer;
-  verticle-align: bottom;
-  position: relative;
-}
-
-input[type="text"] {
-  width: 20px;
-}
-
-label[for="tickets"] {
-  font-size: 1.17em;
-  font-weight: bolder;
-}
-
-label[for="calendar"] {
-  font-size: 1.17em;
-  font-weight: bolder;
-}
-
-label[for="checkbox"] {
-  font-size: 1.17em;
-}
-
-input[type="date"] {
-  cursor: pointer;
-}
-
-input[type="submit"] {
-  text-align: right;
-  cursor: pointer;
-}
-
-.container-ticket-num {
-  padding: 10px;
-}
-
-.container-calendar {
-  padding: 10px;
-}
-
-.container-ticket-title {
-  padding: 10px;
-}
-
-.container-ticket-select {
-  padding: 10px;
-}
-
-.container-ticket-submit {
-  padding: 10px;
-  width: 10%;
-}
-
-
-
-
-.mmapcontent {
-  display: none;
-  margin-top: 15px;
-  width: 100%;
-  border: 1px solid black;
-}
-
-.boxed {
-  margin-left: 10px;
-}
-
-#about {
-  display: block;
-}
-
-.mmappics {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-right: 10px;
-  wdith: 100%;
-}
-
-.mm1 {}
-
-.mm2 {
-  margin-left: 10px;
-}
-
-.mm3 {
-  margin-left: 10px;
-}
-
-@media only screen and (max-width: 360px) {
-
-  /* For mobile phones: */
-  [class*="mm"] {
-    width: 100%;
-    height: 140px;
-  }
-
-  [class*="mmapcontent"] {
-    width: 100%;
-  }
-
-  .marvelheader {
-    margin-top: 10px;
-    align-text: center;
-  }
-
-  .mm3 {
-    margin-right: 10px;
-  }
-
-  .mappics {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-.dcmapcontent {
-  display: none;
-  margin-top: 15px;
-  width: 100%;
-  border: 1px solid black;
-}
-
-.dc-mappics {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-right: 10px;
-  wdith: 100%;
-}
-
-.dc1 {
-  height: 400px;
-  width: 275px;
-}
-
-.dc2 {
-  margin-left: 10px;
-  height: 400px;
-  width: 275px;
-}
-
-.dc3 {
-  margin-left: 10px;
-  height: 400px;
-  width: 275px;
-}
-
-@media only screen and (max-width: 360px) {
-
-  /* For mobile phones: */
-  [class*="dc-"] {
-    width: 100%;
-    width: 104px;
-    height: 145px;
-  }
-
-  [class*="dcmapcontent"] {
-    width: 100%;
-  }
-
-  .dcheader {
-    align-text: center;
-  }
-
-  .dc3 {
-    margin-right: 10px;
-  }
-}
-
-/* Styling for Carousel */
-div.container-carousel {
-  width: 80%;
-  margin: auto;
-}
-.carousel-image {
-  width: 100%;
-  opacity: 0.9;
-  height: auto;
-  margin: auto;
-}
-
-.carousel-caption {
-  height: 210px;
-  width: 60%;
-  display: flex;
   justify-content: center;
+  width: 30%;
+}
+
+.select-number, .select-day, .select-type {
+  padding: 1em;
+}
+
+label {
+  font-size: 1.25em;
+}
+
+/* Styling for CTA DO NOT ALTER */
+.container-cta {
+  display: flex;
   align-items: center;
   flex-direction: column;
 }
 
-/* Styling for FAQ */
+.btn-cta, .btn-submit {
+  text-transform: uppercase;
+  padding: 1em;
+  cursor: pointer;
+}
+
+/* Styling for FAQ DO NOT ALTER */
+.container-faq {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .accordion {
   background-color: #eee;
   color: #444;
   cursor: pointer;
-  padding: 18px;
-  width: 100%;
+  padding: 1.5em;
+  width: 60%;
   text-align: left;
   border: none;
   outline: none;
   transition: 0.4s;
-  font-size: 18px;
+  margin: 0.25em;
 }
 
 .active, .accordion:hover {
   background-color: #ccc;
 }
 
-.accordion:after {
-  content: '\02795';
-  font-size: 13px;
-  color: #777;
-  float: right;
-  margin-left: 5px;
-}
-
-.active:after {
-  content: "\2796";
-}
-
 .panel {
-  padding: 0 18px;
+  padding: 0 1.5em;
   background-color: white;
-  display: none;
+  max-height: 0;
   overflow: hidden;
-  font-size: 17px;
+  transition: max-height 0.2s ease-out;
+  width: 60%;
 }
-
-/* Styling for voting Jumbotron */
-.flex-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  .voting {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-
-  .votebuttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .marvel {
-    width: 250px;
-    height: 110px;
-    right: 20%;
-    margin-right: 50px;
-    margin-left: 20px;
-  }
-
-  .d-c {
-    width: 250px;
-    height: 110px;
-    right: 20%;
-    margin-right: 50px;
-  }
-
-  .marvel:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  }
-
-  .d-c:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-  }
-
-  @media only screen and (max-width: 320px) {
-
-    /* For mobile phones: */
-    [class*="vote-"] {
-      width: 100vw;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    [class*="voting-"] {
-      width: 100vw!important;
-    }
-
-    .superheroxmas {
-      margin-left: 10px;
-      width: 100%;
-    }
-
-    .votedescript{
-      margin-left: 10px;
-    }
-
-    .btn-vote{
-      padding-left: 15px;
-    }
-
-    .d-c{
-      margin-right: 10px;
-    }
-  }
-
-/* styling for CTA */
-.container-cta {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
-}
-
-.btn-cta {
-  text-transform: uppercase;
-  padding: 12px;
-}
-
-/* styling for Navbar */
-.navbar {
-    padding: 5px;
-	border: 1px solid grey;
-	display: flex;
-	justify-content: space-between;
-}
-.navbar ul {
-	list-style: none;
-	display: flex;
-	flex-direction: row;
-}
-.navbar li {
-	padding-left: 70px;
-	padding-right: 70px;
-	display: flex;
-	justify-content: space-around;
-}
-.themepark-logo {
-	width: 150px;
-	background-color: grey;
-	display: flex;
-}
-.navbar-page-link {
-	font-size: 17px;
-}
-.search-icon {
-	padding-left: 20px;
-	padding-right: 20px;
-	border: none;
-	background: none;
-	cursor: pointer;
-}
-.search-open {
-	display: none;
-}
-.search-form {
-	width: 100%;
-}
-.search-box {
-    padding: 10px;
-	width: 90%;
-	font-size: 17px;
-	border: 1px solid grey;
-	float: left;
-	background: #f1f1f1;
-}
-.search-box-icon {
-    padding: 7px;
-    border: 1px solid grey;
-    background: none;
-    min-width: 38px;
-}
-.show-searchbar {
-    padding: 10px;
-	border: 1px solid grey;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-}
-.navres-icon {
-	display: none;
-}
-.navres-open {
-	display: none;
-}
-@media only screen and (max-width: 660px) {
-	.navbar {
-	   padding: 5px;
-	   border: 1px solid grey;
-	   display: flex;
-	   justify-content: space-between;
-	}
-	.navbar ul {
-		display: none;
-    }
-    .navbar li {
-        display: none;
-    }
-    .themepark-logo {
-        width: 150px;
-		background-color: grey;
-		display: flex;
-    }
-    .navbar-page-link {
-    	display: none;
-    }
-	.search-box {
-        width: 70%;
-    }
-	.navres-icon {
-        padding: 11px;
-        border: none;
-        background: none;
-        cursor: pointer;
-        display: flex;
-    }
-    .navres-open {
-        display: none;
-    }
-    .navres-open ul {
-        list-style: none;
-        display: flex;
-        flex-direction: column;
-    }
-    .navres-open li {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        display: flex;
-    }
-    .show-navres {
-        width: 50%;
-        border: 1px solid grey;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: space-around;
-    }
-}
-
-/* Styling for Banner */
-.container-banner {
-	padding-top: 10px;
-	padding-bottom: 10px;
-	background-color:#CDCDCD;
-	display: flex;
-	justify-content: space-around;
-}
-.banner-image {
-	width: 35%;
-}
-.mmapcontainer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    background-size: 100%;
-  }
-
-  .marvelmapmm {
-    width: 200px;
-    height: 230px;
-    padding-right: 5px;
-  }
-
-  .dcmapmm {
-    width: 200px;
-    height: 230px;
-    padding-right: 5px;
-  }
-
-  @media only screen and (max-width: 360px) {
-  /* For mobile phones: */
-  [class*="map-"] {
-    width: 50px;
-    height: 50px;
-  }
-}
-
-[class*="map-"] {
-    max-width: 95%;
-  }
 
 /* Styling for Ratings */
+.container-ratings {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 
-.rating-heading {
-  font-size: 25px;
-  margin-right: 15px;
+.container-ratings-total {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container-bar-display {
+  padding-top: 0.5em;
+}
+
+.rating-text {
+  padding: 0px;
+  margin: 0px;
 }
 
 .fa {
-  font-size: 22px;
+  font-siz: 1.75em;
 }
 
-.checked {
+.fa-star-half, .fa-star {
   color: gold;
-}
-
-.fa-star-half {
-  color: gold;
-}
-
-.rating-side {
-  float: left;
-  width: 10%;
-  margin-top: 10px;
-  margin-right: 5px;
-}
-
-.rating-middle {
-  float: left;
-  width: 50%;
-  margin-top: 10px;
-  margin-right: 20px;
-}
-
-.rating-right {
-  text-align: left;
-  margin-right: 150px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 .rating-bar-container {
@@ -667,68 +194,47 @@ div.container-carousel {
   color: white;
 }
 
-.bar-5 {width: 72%; height: 14px; background-color: #00FF00;}
-.bar-4 {width: 15%; height: 14px; background-color: #00FF00;}
-.bar-3 {width: 2%; height: 14px; background-color: #00FF00;}
-.bar-2 {width: 4%; height: 14px; background-color: #00FF00;}
-.bar-1 {width: 8%; height: 14px; background-color: #00FF00;}
-
-@media (max-width: 400px) {
-  .rating-side, .rating-middle {
-    width: 100%;
-  }
-
-  .rating-right {
-    display: none;
-  }
+.bar-5 {
+  width: 72%;
+  height: 14px;
+  background-color: #00FF00;
 }
 
-/* Styling for Footer */
+.bar-4 {
+  width: 15%;
+  height: 14px;
+  background-color: #00FF00;
+}
 
+.bar-3 {
+  width: 2%;
+  height: 14px;
+  background-color: #00FF00;
+}
+
+.bar-2 {
+  width: 4%;
+  height: 14px;
+  background-color: #00FF00;
+}
+
+.bar-1 {
+  width: 8%;
+  height: 14px;
+  background-color: #00FF00;
+}
+
+/* Styling for Footer DO NOT ALTER */
 footer {
   position: absolute;
   bottom: 100;
   width: 100%;
-  height: 200px;
   text-align: center;
 }
-.container-footer2 {
-  column-count: 3;
-  column-width: 250px;
-  column-gap: 10px;
-  column-rule-width: 1px;
-}
 
-.Attractions {
-  height: 200px;
+.container-footer {
   display: flex;
-  flex-direction: column;
-}
-.VisitorInformation {
-  height: 200px;
-  display: flex;
-  flex-direction: column;
-}
-
-.ContactInformation {
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.SocialMedia {
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.popups {
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: ;
+  justify-content: space-around;
 }
 
 .fa:hover {
@@ -763,10 +269,167 @@ footer {
 }
 
 .fa-youtube {
-  background: #c4302b ;
+  background: #c4302b;
   color: white;
   padding: 7px;
   width: 28px;
   border-radius: 50%;
   opacity: 1;
 }
+
+/* Styling for Navbar */
+.navbar {
+  padding: 5px;
+  border: 1px solid grey;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbar ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.navbar li {
+  padding-left: 70px;
+  padding-right: 70px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.themepark-logo {
+  width: 150px;
+  background-color: grey;
+  display: flex;
+}
+
+.navbar-page-link {
+  font-size: 17px;
+}
+
+.search-icon {
+  padding-left: 20px;
+  padding-right: 20px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+.search-open {
+  display: none;
+}
+
+.search-form {
+  width: 100%;
+}
+
+.search-box {
+  padding: 10px;
+  width: 90%;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  background: #f1f1f1;
+}
+
+.search-box-icon {
+  padding: 7px;
+  border: 1px solid grey;
+  background: none;
+  min-width: 38px;
+}
+
+.show-searchbar {
+  padding: 10px;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.navres-icon {
+  display: none;
+}
+
+.navres-open {
+  display: none;
+}
+
+@media only screen and (max-width: 660px) {
+  .navbar {
+    padding: 5px;
+    border: 1px solid grey;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navbar ul {
+    display: none;
+  }
+
+  .navbar li {
+    display: none;
+  }
+
+  .themepark-logo {
+    width: 150px;
+    background-color: grey;
+    display: flex;
+  }
+
+  .navbar-page-link {
+    display: none;
+  }
+
+  .search-box {
+    width: 70%;
+  }
+
+  .navres-icon {
+    padding: 11px;
+    border: none;
+    background: none;
+    cursor: pointer;
+    display: flex;
+  }
+
+  .navres-open {
+    display: none;
+  }
+
+  .navres-open ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .navres-open li {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: flex;
+  }
+
+  .show-navres {
+    width: 50%;
+    border: 1px solid grey;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-around;
+  }
+}
+
+/* Styling for Map */
+.container-map {
+  display: flex;
+  flex-direction: row;
+  margin: 2em;
+}
+
+.map-img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* TODO: Responsive layout for styling */
