--- a/uol-web-dev/style.css
+++ b/uol-web-dev/style.css
@@ -1,31 +1,32 @@
 /* Typography DO NOT ALTER */
-*, body {
-  font: 12px 'Work Sans', serif;
+*,
+body {
+  font: 12px "Work Sans", serif;
 }
 
 h1 {
-  font: 800 2.5em 'Work Sans', serif;
+  font: 800 2.5em "Work Sans", serif;
   /* style weight size/line-height font-family */
 }
 
 h2 {
-  font: 600 2em 'Work Sans', serif;
+  font: 600 2em "Work Sans", serif;
 }
 
 h3 {
-  font: 400 1.5em 'Work Sans', serif;
+  font: 400 1.5em "Work Sans", serif;
 }
 
 p {
-  font: 400 1em 'Work Sans', serif;
+  font: 400 1em "Work Sans", serif;
 }
 
 footer-text {
-  font: 700 0.75em 'Work Sans', serif;
+  font: 700 0.75em "Work Sans", serif;
 }
 
 navbar-text {
-  font: 700 1.25em 'Work Sans', serif;
+  font: 700 1.25em "Work Sans", serif;
 }
 
 /* Wraps the entire page to give it a margin DO NOT ALTER */
@@ -49,7 +50,12 @@ navbar-text {
 }
 
 .vote-content {
-  padding: 4em;
+  padding: 3em;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 100%;
 }
 
 /* Styling for Tickets Promo DO NOT ALTER */
@@ -68,7 +74,7 @@ navbar-text {
   align-items: center;
   width: 50%;
   cursor: pointer;
-  font: bolder 2em 'Work Sans', serif;
+  font: bolder 2em "Work Sans", serif;
   text-transform: uppercase;
   height: 2em;
 }
@@ -102,7 +108,9 @@ navbar-text {
   width: 30%;
 }
 
-.select-number, .select-day, .select-type {
+.select-number,
+.select-day,
+.select-type {
   padding: 1em;
 }
 
@@ -117,7 +125,8 @@ label {
   flex-direction: column;
 }
 
-.btn-cta, .btn-submit {
+.btn-cta,
+.btn-submit {
   text-transform: uppercase;
   padding: 1em;
   cursor: pointer;
@@ -143,7 +152,8 @@ label {
   margin: 0.25em;
 }
 
-.active, .accordion:hover {
+.active,
+.accordion:hover {
   background-color: #ccc;
 }
 
@@ -174,75 +184,59 @@ label {
   padding-top: 0.5em;
 }
 
-.rating-heading {
-    font-size: 18px;
-    margin-right: 12px;
-}
-
 .rating-text {
   padding: 0px;
   margin: 0px;
-  text-align: left;
-}
-
-.rating-text-left {
-    float: left;
-    width: 10%;
-    margin-right: 5px;
-}
-
-.rating-text-right {
-    text-align: right;
 }
 
 .fa {
-  font-size: 1.75em;
+  font-siz: 1.75em;
 }
 
-.fa-star-half, .fa-star {
+.fa-star-half,
+.fa-star {
   color: gold;
 }
 
 .rating-bar-container {
-  width: 79%;
+  width: 100%;
   background-color: #f1f1f1;
-  right: 75px;
+  text-align: center;
   color: white;
-  float: left;
 }
 
 .bar-5 {
   width: 72%;
   height: 14px;
-  background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 .bar-4 {
   width: 15%;
   height: 14px;
-  background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 .bar-3 {
   width: 2%;
   height: 14px;
-  background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 .bar-2 {
   width: 4%;
   height: 14px;
-  background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 .bar-1 {
   width: 8%;
   height: 14px;
-  background-color: #00FF00;
+  background-color: #00ff00;
 }
 
 /* Styling for Footer DO NOT ALTER */
-footer {
+.footer {
   position: absolute;
   bottom: 100;
   width: 100%;
@@ -250,34 +244,8 @@ footer {
 }
 
 .container-footer {
-  column-count: 3;
-  column-gap: 10px;
-  column-rule-width: 1px;
   display: flex;
   justify-content: space-around;
-}
-
-.container-attractions {
-  width: 350px;
-  height: 200px;
-}
-
-.container-visitor {
-  width: 350px;
-  height: 200px;
-}
-
-.container-others {
-  width: 350px;
-  height: 200px;
-}
-
-.container-contact {
-  height: 35px;    
-}
-
-.container-social-media {
-  height: 55px;
 }
 
 .fa:hover {
@@ -285,11 +253,10 @@ footer {
 }
 
 .fa-facebook {
-  background: #3B5998;
+  background: #3b5998;
   color: white;
-  padding: 8px;
-  width: 15px;
-  height: 15px;
+  padding: 7px;
+  width: 28px;
   border-radius: 50%;
   opacity: 1;
 }
@@ -297,19 +264,17 @@ footer {
 .fa-instagram {
   background: #3f729b;
   color: white;
-  padding: 8px;
-  width: 15px;
-  height: 15px;
+  padding: 7px;
+  width: 28px;
   border-radius: 50%;
   opacity: 1;
 }
 
 .fa-twitter {
-  background: #55ACEE;
+  background: #55acee;
   color: white;
-  padding: 8px;
-  width: 15px;
-  height: 15px;
+  padding: 7px;
+  width: 28px;
   border-radius: 50%;
   opacity: 1;
 }
@@ -317,9 +282,8 @@ footer {
 .fa-youtube {
   background: #c4302b;
   color: white;
-  padding: 8px;
-  width: 15px;
-  height: 15px;
+  padding: 7px;
+  width: 28px;
   border-radius: 50%;
   opacity: 1;
 }
@@ -478,5 +442,209 @@ footer {
   max-width: 100%;
   height: auto;
 }
+
+/* dc map */
+.dcmapcontent {
+  display: none;
+  margin-top: 15px;
+  margin-right: 5em;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.boxed {
+  margin-left: 5px;
+}
+
+#about {
+  display: block;
+}
+
+.container-dcmap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 10px;
+  width: 100%;
+}
+
+.dc-1 {
+  height: 25%;
+  width: 25%;
+}
+
+.dc-2 {
+  margin-left: 5px;
+  height: 25%;
+  width: 25%;
+}
+
+.dc-3 {
+  margin-left: 5px;
+  height: 25%;
+  width: 25%;
+}
+
+/*marvel map*/
+.marvelmapcontent {
+  display: none;
+  margin-top: 15px;
+  width: 100%;
+  border: 1px solid black;
+}
+
+#about {
+  display: block;
+}
+
+.container-marvelmap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-right: 10px;
+  width: 100%;
+}
+
+.marvel-1 {
+  height: 25%;
+  width: 25%;
+}
+
+.marvel-2 {
+  margin-left: 5px;
+  height: 25%;
+  width: 25%;
+}
+
+.marvel-3 {
+  margin-left: 5px;
+  height: 25%;
+  width: 25%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 10px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.modal-title {
+  font-size: 3em;
+  padding-top: 0px;
+}
+
+.modal-body {
+  font-size: 2em;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 360px) {
+  /* For mobile phones: */
+
+  .container-dc {
+    flex-direction: column;
+    justify-content: center;
+    align-content: stretch;
+    width: 22.5em;
+  }
+
+  .dcheader {
+    max-width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .dcmapcontent {
+    width: 100%;
+  }
+
+  .boxed {
+    width: 22.5em;
+    font-size: 1em;
+    margin-left: .2em;
+  }
+
+  .container-marvel {
+    flex-direction: column;
+    justify-content: center;
+    align-content: stretch;
+    width: 22.5em;
+  }
+
+  .marvelmapcontent {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .marvelheader {
+    width: 100%;
+  }
+
+  .container-page {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .container-vote {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .vote-content {
+    padding: 0;
+    width: 22.5em;
+  }
+
+  .container-map {
+    width: 30em;
+  }
+
+}
+
 
 /* TODO: Responsive layout for styling */
