--- a/uol-web-dev/style.css
+++ b/uol-web-dev/style.css
@@ -94,7 +94,7 @@ navbar-text {
 }
 
 #container-promo {
-  display: flex;
+  display: none;
   justify-content: space-between;
   align-items: baseline;
   padding: 0.5em 1em;
